Lithium - A Battery Status Monitor Applet for the ROX Panel

2006-01-16 Ken Hayber <ken@hayber.us>
003
	* Quick fix for ACPI (tested on my PC, but no laptops yet)
	
2006-01-15 Ken Hayber <ken@hayber.us>
002
	* Created Lithium from Baroque 0.5.1 code base
	* Made applet resize with panel
	* Moved all text display to the tooltip.
	* Replaced progress bar with icon showing charge/AC status
	* Big rewrite of structure (not much logic change) to suit my style
	* Fix acpi.py to raise an Exception when /proc/acpi does not exist
	* Created pmu.py for PowerMac support
	* (previously released as Battery 001 without last 2 changes)

changes from 0.5.0 to 0.5.1:

2003-12-14 Tilo Riemer <riemer@lincvs.org>

	* adapted for acpi.py 0.3.0
	Baroque needs at least acpi.py 0.3.0 now because
	a changed return type of estimated_lifetime
	
2003-12-10 Rds <rds@rdsarts.com>

	* fixed: ACPI freeze when going from charging from
		battery-powered.
	* cleaned up some logic
	* option change: time-till-update now works off
		tenths of a second instead of milliseconds


changes from merge of BatMonitor and Baroque to 0.5.0:

2003-12-06 Tilo Riemer <riemer@lincvs.org>

	* fixed: crash if apm is used


changes of BatMonitor before merging with Baroque:

2003-11-27 Rds <rds@rdsarts.com>

	* added: some comments, cleaned up some things. 
	Fixed the 'full battery freeze.'

2003-11-26 Rds <rds@rdsarts.com>

	* REALLY fixed dialog:
	Fixed error-out dialog... I think.
	Various spelling fixes in Options.xml

2003-11-25 Rds <rds@rdsarts.com>

	* fixed: warning dialog.

2003-11-24 Rds <rds@rdsarts.com>

	Changelog of BatMonitor started. ;)


changes from 0.4.0 to 0.4.1:

2003-09-08 Tilo Riemer <riemer@lincvs.org>

	* changed: default check intervall is now 10 seconds
	(instead of 20 seconds)

2003-08-19 Tilo Riemer <riemer@lincvs.org>

	* changed: catch exception from acpi.py (configuration- 
	changed exception)

	
changes from 0.3.1 to 0.4.0:
	
2003-06-03 Tilo Riemer <riemer@lincvs.org>
